# Lab3_conv_hull

./: CMakeLists.txt  conv_hull.cpp  conv_hull.h  main.cpp
